@@ -1,3 +1,9 @@
+2004-08-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
+
+	* stack.tcl: Corrected typo in constructor error message,
+	* queue.tcl: due to copying from tree. Found by Michael
+	  Schlenker.
+
 2004-08-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* struct_tree.man: Added methods 'ancestors' and 'descendants'.
